# RAG-CAG-SYSTEM-CHATBOT

./: .coverage  .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  DEPENDENCY_UPDATE_NOTES.md  Dockerfile  LICENSE  Makefile  README.md  coverage.xml  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  userbot.py
.claude/commands/: issue.md
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml
bitacora/: ARQUITECTURA_GLOBAL.md  DASHBOARD.md  LLM.md  configuracion_rapida.md  deployment_guide.md  prompt.md  supervisor.md  userbot.md
bitacora/memoria/: GUIA_COMPLETA.md  MEMORIA.md
config/: logging.yaml
docker/neo4j/: 01_constraints.cypher  02_initial_nodes.cypher  03_procedures.cypher  init.sh
docker/postgres/: init.sql
docker/redis/: init.lua  init.sh  redis.conf
docs/: ARCHITECTURE.md  CI_CD_SETUP.md  DATABASE_SCHEMA_EVOLUTION.md  SCRIPTS_USAGE.md
monitoring/: README.md
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: ai-companion-overview.json  system-metrics.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
monitoring/prometheus/: alert_rules.yml  prometheus.yml
scratchpads/: issue-1.md
scripts/: authenticate_telegram.py  check_connections.py  health_check.py  init_databases.py  load_test.py  migrate_database.py  monitoring.sh  populate_test_data.py  reset_environment.py  setup_dev.sh  test_consolidation.py  validate_docker.py
src/common/: alerts.py  cache.py  celery_app.py  config.py  database.py  enhanced_logging.py  health_checks.py  monitoring.py  performance_config.py  profiling.py  rate_limiter.py  sentry_config.py  tasks.py
src/dashboard/: main.py
src/memoria/: consolidation.py  embeddings.py  emotional_analyzer.py  memory_manager.py  spreading_activation.py
src/userbot/: main.py
tests/: test_databases.py  test_health_checks.py  test_imports.py  test_integration.py  test_integration_monitoring.py  test_monitoring_system.py  test_profiling_system.py  test_spreading_activation.py
